fixed letter spacing in brand

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -15,7 +15,7 @@ body {
   font-family: 'quicksandregular', sans-serif;
   font-weight: bold;
   font-size: 24px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 
 .booyah-box {
